<resources>
    <string name="app_name">App Name</string>

    <string name="Projects_Button"> Projects </string>
    <string name="Pdfs_Button"> PDFs </string>
    <string name="VideoTuts_Button"> Video Tutorials </string>
    <string name="AdditionalMats_Button"> Additional Materials </string>
    <string name="Contact_Button"> Contact </string>
    <string name="Settings_Button"> About/Help </string>
    <string name="Local_pdf"> Local </string>
    <string name="Ravelry"> Ravelry </string>
    <string name="Y_collection"> Yarn Collection </string>
    <string name="PatternKAbv"> Pattern Key Abbreviation </string>
    <string name="this_knit">CO: Cast on stitches\nk1: knit 1 \np1: purl 1\nk2tog: knit 2 together\np2tog: purl 2 together\nSt st: stockinette stitch\nssk: slip 1 stitch, slip 1 stitch, knit those stitches through the back of the stitch\n**: repeat the sequence as many times as written on the pattern\np3tog: purl 3 together\nslwif: Slip 1 stitch with yarn in front\nm1: Make 1 stitch\nm1p: Make 1 stitch purlwise\nkfb: Knit the front of the stitch and the back of the stitch\nyo: yarn over\nRS: Right side of the work\nWS: Wrong side of the work\npm: Place marker\nsm: Slide marker </string>
    <string name="To">To</string>
    <string name="Subject">Subject</string>
    <string name="Message">Your Message</string>
    <string name="Send">Send</string>
    <string name="login">login</string>
    <string name="note">Note</string>
    <string name="write_your_note_here">Write your note here</string>
    <string name="new_note">new_note</string>
    <string name="save">save</string>
    <string name="title">Title</string>
    <string name="note_date">Some date here</string>
    <string name="note_content">The note contents</string>
    <string name="delete">delete</string>
    <string name="add_new">Add New</string>
    <string name="clear_items">Clear Items</string>
    <string name="sort">sort</string>
    <string name="counter">0</string>
    <string name="about"> This app was made as a project for a 3rd year college class "'Business Application Development'". \App made by: Ioana Avram and Remigija Vindasiute </string>
    <string name="about_helpTitle"> About - Help page </string>
    <string name="help"> The list of full functionalities of the app and where to find them: \nThe Api can be found by clicking on the "'pdfs'" button on main page, then choosing the "'Ravelry'" option. choosing the "'local'" option will load pdfs you already have on your device.
    \nclicking on the "'projects'" tab on the main page will allow you to make notes, and you"'"ll also find stitch-row counters there.
    \nThe "'video tutorials'" tab will lead you to find some tutorials relating to the basics of knitting.
    \n The "'Additional Materials'" tab is where you"'"d find an option to go and look up the pattern abbreviation key, or an option to make a list/collection of the yarns you own.
    \nThe "'contact'" page is for when you might want to send us a message regarding any issues.
    \nLastly, the "'About/Help'" page is where you"'"ll find some information about the app and where to find specific things.</string>

</resources>
