<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".Contact_Screen">

    <EditText
        android:id="@+id/To"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/To" />

    <EditText
        android:id="@+id/Subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Subject" />

    <EditText
        android:id="@+id/Message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/Message" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/Send" />

</LinearLayout>