<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button9"
        android:layout_width="298dp"
        android:layout_height="55dp"
        android:background="@drawable/btn_shape"
        android:onClick="projectScreen"
        android:text="@string/Projects_Button"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="298dp"
        android:layout_height="55dp"
        android:background="@drawable/btn_shape"
        android:onClick="pdfScreen"
        android:text="@string/Pdfs_Button"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button11"
        android:layout_width="298dp"
        android:layout_height="55dp"
        android:background="@drawable/btn_shape"
        android:onClick="videoTutorialsScreen"
        android:text="@string/VideoTuts_Button"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button12"
        android:layout_width="298dp"
        android:layout_height="55dp"
        android:background="@drawable/btn_shape"
        android:onClick="additionalMaterialsScreen"
        android:text="@string/AdditionalMats_Button"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button13"
        android:layout_width="298dp"
        android:layout_height="55dp"
        android:background="@drawable/btn_shape"
        android:onClick="contactScreen"
        android:text="@string/Contact_Button"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <Button
        android:id="@+id/button14"
        android:layout_width="298dp"
        android:layout_height="55dp"
        android:background="@drawable/btn_shape"
        android:onClick="settingsScreen"
        android:text="@string/Settings_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button13" />
</androidx.constraintlayout.widget.ConstraintLayout>