<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    tools:context=".Yarn_Collection_Screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/newItemButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add_new"
            android:background="@drawable/btn_shape"
            android:layout_margin="5dp"
            android:textColor="?attr/textcolor"
        />
        <Button
            android:id="@+id/deleteAllItemsButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clear_items"
            android:background="@drawable/btn_shape"
            android:layout_margin="5dp"
            android:textColor="?attr/textcolor"
            />
    </LinearLayout>


    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="?attr/textcolor"/>

    <Button
        android:id="@+id/buttonSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sort"
        android:background="@drawable/btn_shape"
        android:layout_margin="5dp"
        android:textColor="?attr/textcolor"/>

</LinearLayout>