<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    tools:context=".Settings_Screen"
    android:padding="24dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="30dp"
                android:textColor="?attr/textcolor"
                android:text="@string/about_helpTitle"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textStyle="italic"
                android:textSize="15dp"
                android:layout_gravity="center_vertical"
                android:gravity="left"
                android:textColor="?attr/textcolor"
                android:text="@string/about"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:padding="20dp"
                android:text="@string/help"
                android:textColor="?attr/textcolor"
                android:textSize="20dp"
                android:typeface="serif" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>